Remove complex query parsing